<resources>
    <string name="app_name">Púrpura chat</string>

    <!--<string name="google_maps_api_key">AIzaSyA4z1nMNMtAwP47zWC0Xd7_gt67A3EPCMI</string>-->

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_chatroom_map_list">Chatroom Map</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="tabian_consulting_logo">Tabian Consulting Logo</string>
    <string name="email_registration">Email Registration</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">Users</string>
    <string name="collection_user_locations">User Locations</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_current_user_location">intent_current_user_location</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_chatroom_map">intent_chatroom_map</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>
    <string name="intent_filtered_chat_messages">intent_filtered_chat_messages</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>

    <!-- Fragments Names -->
    <string name="fragment_chatroom_map">Chatroom Map</string>
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>
    <string name="fragment_add_user_to_chatroom">Add_user_to_chatroom</string>
    <string name="fragment_filtered_chat_messages">Filtered Chat Messages List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>
    <string name="toggle_location">Toggle location sharing</string>
    <string name="enable_location">Share your location</string>
    <string name="disable_location">Stop sharing your location</string>
    <string name="add_user_to_chatroom">Add user</string>
    <string name="intent_user_to_add">user_to_add_in_chatroom</string>

    <string name="location_sharing">Location sharing</string>
    <string name="location_disabled">Disabled</string>
    <string name="location_enabled">Enabled</string>
    <string name="share_location">Share location</string>
    <string name="enter_message_hint">Enter message…</string>
    <string name="rename_chatroom">Rename Chatroom</string>
    <string name="delete_chatroom">Delete Chatroom</string>
    <string name="search_chatroom">Search Chatroom</string>
    <string name="chatroom_image">Set Chatroom Image</string>
    <string name="action_enable_nearby">See what\'s nearby</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="chatroom_name">Chatroom name</string>
    <string name="image_content_descriptor">image</string>
    <string name="title_activity_profile_drawer">ProfileDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="action_change_theme">Change color</string>
    <string name="color_picker_title">Choose color</string>
    <string name="action_change_nickname">Set nickname</string>
    <string name="action_chatroom_summary">Summarize messages</string>
    <string name="title_activity_profile_edit">ProfileEditActivity</string>

</resources>
