<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_chatroom_user_list"
        android:title="@string/action_chatroom_user_list"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chatroom_leave"
        android:title="@string/action_leave_chatroom"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_share_location"
        android:title="@string/toggle_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chatroom_delete"
        android:title="@string/delete_chatroom"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chatroom_rename"
        android:title="@string/rename_chatroom"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_chatroom_search"
        android:title="@string/search_chatroom"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chatroom_image"
        android:title="@string/chatroom_image"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chatroom_add_user"
        android:title="@string/add_user_to_chatroom"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chatroom_change_theme"
        android:title="@string/action_change_theme"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chatroom_change_nickname"
        android:title="@string/action_change_nickname"
        app:showAsAction="never" />

</menu>