<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">

    <ToggleButton
        android:id="@+id/location_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:gravity="center"
        android:text="@string/share_location"
        android:textOff="@string/location_disabled"
        android:textOn="@string/location_enabled" />
    />

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/chatmessage_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/grey_border_top">


        <android.support.text.emoji.widget.EmojiAppCompatEditText
            android:id="@+id/input_message"
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/enter_message_hint"
            android:textColor="@color/Black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnCamera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_full_screen_black_24dp"
            app:layout_constraintLeft_toRightOf="@id/input_message"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnGallery"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/theme_button"
            app:layout_constraintLeft_toRightOf="@id/btnCamera"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/checkmark"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_check_green_24dp"
            app:layout_constraintLeft_toRightOf="@id/btnGallery"
            app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>


    <FrameLayout
        android:id="@+id/chatroom_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</RelativeLayout>